Исправления Pixel perfect

--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -1,5 +1,10 @@
 .contact {
-  padding-bottom: 22px;
+  padding-bottom: 20px;
+
+  &--email {
+    padding-left: 5px;
+    padding-bottom: 24px;
+  }
 }
 
 .contact__title {
@@ -39,6 +44,11 @@
     width: 280px;
     margin: 5px 0 40px 0;
     padding-bottom: 0;
+
+    &--email {
+      padding-left: 0;
+      padding-bottom: 0;
+    }
   }
 
   .contact__title {
