--- a/source/less/blocks/rates.less
+++ b/source/less/blocks/rates.less
@@ -39,6 +39,8 @@
 }
 
 .rates__toggles {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: center;
   margin: 10px auto 0 auto;
