--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 // index.html
 @import "blocks/button.less";
 @import "blocks/page-header.less";
+@import "blocks/logo-icon.less";
 @import "blocks/page-content.less";
 @import "blocks/main-nav.less";
 @import "blocks/intro.less";
