--- a/source/less/blocks/feature.less
+++ b/source/less/blocks/feature.less
@@ -3,27 +3,27 @@
   text-align: center;
 
   .wrapper(@mobile-width);
-  padding: 0 15px 7px 15px;
+  padding: 0 15px 22px 15px;
 }
 
 .feature__title {
   font-size: 18px;
   line-height: 10px;
+  margin: 18px 0;
 }
 
 .feature__info {
-  padding: 0 10px;
   font-size: 14px;
   line-height: 24px;
-  letter-spacing: 0.3px;
+  padding: 0 10px;
+  margin: 0;
 }
 
 @media (min-width: @tablet-width) {
   .feature {
     text-align: left;
     .wrapper-reset();
-
-    padding-top: 10px;
+    padding-bottom: 25px;
   }
 
   .feature__info {
@@ -41,7 +41,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
-    padding: 295px 20px 0 20px;
+    padding: 296px 20px 0 20px;
 
     box-sizing: border-box;
 
@@ -51,7 +51,7 @@
       top: 0;
       left: calc(50% - 140px);
 
-      width: 280px;
+      width: 283px;
       min-height: 300px;
       margin-bottom: 43px;
       padding: 300px 20px 0 20px;
@@ -77,7 +77,7 @@
     font-size: 30px;
     line-height: 30px;
     margin-top: 60px;
-    margin-bottom: 10px;
+    margin-bottom: 28px;
   }
 
   .feature__info {
