--- a/source/less/blocks/likes.less
+++ b/source/less/blocks/likes.less
@@ -3,6 +3,7 @@
 
   display: flex;
   align-items: center;
+  margin-top: 10px;
 
   font-size: 12px;
   font-weight: 400;
@@ -12,18 +13,20 @@
 
 .likes__button {
   position: absolute;
-  top: calc(50% - 1.5em / 2);
+  top: calc(50% - 8px);
   left: 0;
 
-  width: 1.5em;
-  height: 1.5em;
+  padding: 0;
+  margin: 0;
+
+  width: 15px;
+  height: 20px;
   .button-reset();
 }
 
 .likes__counts {
   margin: 0;
-  padding: 0 0 3px 33px;
-  letter-spacing: 0.3px;
+  padding-left: 32px;
 }
 
 .likes__icon {
@@ -31,11 +34,13 @@
 }
 
 @media (min-width: @tablet-width) {
+
   .likes__counts {
     padding: 0 33px 0 0;
   }
 
   .likes__button {
+    top: 3px;
     left: auto;
     right: 5px;
   }
