--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -8,15 +8,14 @@
   line-height: 30px;
   font-weight: 700;
 
-  margin-bottom: 0;
+  margin-bottom: 14px;
 }
 
 .review__text {
-  margin-top: 11px;
+  margin: 0;
   width: 100%;
   font-size: 14px;
   line-height: 30px;
-  letter-spacing: 0.3px;
 
   &::before {
     content: "«";
@@ -41,7 +40,8 @@
   .review__author {
     order: 2;
 
-    margin-top: 15px;
+    margin: 0;
+    padding-top: 35px;
     font-size: 20px;
   }
 
@@ -54,12 +54,11 @@
   .review__post {
     display: block;
     margin: 0;
-    padding-top: 5px;
+    padding-top: 3px;
 
     font-weight: 400;
     font-size: 14px;
     line-height: 30px;
-    letter-spacing: 0.3px;
   }
 }
 
@@ -69,12 +68,8 @@
     padding-right: 100px;
   }
 
-  .review__text {
-    letter-spacing: 0.4px;
-  }
-
   .review__author {
-    margin-top: 20px;
+    margin-top: 0;
 
     font-weight: 700;
     font-size: 24px;
