--- a/source/less/blocks/reviews-slider.less
+++ b/source/less/blocks/reviews-slider.less
@@ -78,7 +78,7 @@
 
 @media (min-width: @tablet-width) {
   .reviews-slider__item {
-    margin-bottom: 32px;
+    margin-bottom: 18px;
   }
 }
 
@@ -102,7 +102,11 @@
   }
 
   .reviews-slider__list {
-    padding-top: 150px;
+    padding-top: 168px;
+  }
+
+  .reviews-slider__item {
+    margin-bottom: 35px;
   }
 
   .reviews-slider__toggles {
