Завершение адаптивной верстки декоративных элементов

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -49,6 +49,7 @@
 .form__checkbox {
   padding-left: 70px;
   margin-bottom: 32px;
+  outline: none;
 
   &::before {
     content: "";
@@ -91,6 +92,7 @@
 .form__radio {
   padding-left: 70px;
   margin-bottom: 25px;
+  outline: none;
 
   &::before {
     content: "";
@@ -142,6 +144,7 @@
   color: @bg-darkblue;
 
   border: 2px solid @bg-gray-dark;
+  outline: none;
 
   &:hover,
   &:focus {
@@ -165,6 +168,7 @@
   color: @bg-darkblue;
 
   border: 2px solid @bg-gray-dark;
+  outline: none;
 
   &:hover,
   &:focus {
@@ -190,6 +194,7 @@
   border-width: 2px;
   border-color: @wood-green;
   background-color: @wood-green;
+  outline: none;
 
   &:hover:not(:disabled),
   &:focus:not(:disabled),
@@ -207,6 +212,8 @@
     background-color: @bg-gray-dark;
   }
 }
+
+
 
 .form__submit-note {
   margin-top: 35px;
