Исправление ошибок Travis

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -20,7 +20,7 @@
   overflow: hidden;
 
   .background(50%; 100%; cover);
-  background-image: url('../img/bg-map-mobile@1x.png');
+  background-image: url("../img/bg-map-mobile@1x.png");
 
   &::before {
     content: "";
@@ -98,7 +98,7 @@
   .contacts__map {
     height: 365px;
     .background(50%; 60%; 100% cover);
-    background-image: url('../img/bg-map-desktop@1x.jpg');
+    background-image: url("../img/bg-map-desktop@1x.jpg");
 
     &::before {
       border-top: 60px solid @white;
