Исправление отступа в шапке по PixelPerfect

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -123,16 +123,20 @@
     background-image: url("../img/bg-back-tablet@1x.jpg");
   }
 
+  .page-header__navigation--open {
+    margin-top: 0;
+  }
+
   .page-header__wrapper {
     .wrapper(@tablet-width);
   }
 
   .page-header__logo {
-    padding: 22px 20px 38px 0;
+    padding: 27px 20px 38px 0;
   }
 
   .page-header__hamburger {
-    top: 25px;
+    top: 28px;
   }
 }
 
