Исправление под pixel perfect

--- a/source/less/blocks/effect.less
+++ b/source/less/blocks/effect.less
@@ -92,6 +92,11 @@
     .wrapper(@tablet-width);
     min-height: 276px;
   }
+
+  .effect__description,
+  .effect__link {
+    margin-bottom: 8px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -152,7 +157,7 @@
   .effect__description,
   .effect__link {
 
-    margin-bottom: 32px;
+    margin-bottom: 30px;
 
     font-size: 18px;
     line-height: 30px;
