--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -3,7 +3,7 @@
   padding-top: 15px;
 
   &--apps {
-    padding-top: 14px;
+    padding-top: 12px;
   }
 }
 
@@ -136,7 +136,7 @@
   display: block;
   width: 100%;
   padding: 14px 20px 15px 20px;
-  margin-bottom: 8px;
+  margin-bottom: 6px;
 
   font-size: 18px;
   line-height: 30px;
@@ -155,10 +155,10 @@
     border-color: @text-blood;
   }
 
-  &:invalid {
-    background-color: fade(@text-blood, 10);
-    border-color: fade(@text-blood, 20);
-  }
+  // &:invalid {
+  //   background-color: fade(@text-blood, 10);
+  //   border-color: fade(@text-blood, 20);
+  // }
 }
 
 .form__textarea {
@@ -244,7 +244,7 @@
   .form__field-contestant {
     display: flex;
     justify-content: flex-start;
-    margin-top: 44px;
+    margin-top: 45px;
   }
 
   .form__field-contact {
@@ -426,7 +426,7 @@
   }
 
   .form__field-contestant {
-    margin-top: 45px;
+    margin-top: 46px;
 
     &:last-of-type {
       margin-bottom: 0;
@@ -464,12 +464,12 @@
     }
 
     &--contact {
-      margin-top: -12px;
+      margin-top: -10px;
     }
 
     &--achievement {
       margin-top: -30px;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
       margin-left: 203px;
     }
 
@@ -480,7 +480,7 @@
   }
 
   .form__label--contact {
-    padding: 0 20px 16px 20px;
+    padding: 3px 20px 14px 20px;
     order: 1;
   }
 
