--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -22,6 +22,9 @@
       height: 286px;
       background-image: url("../img/iphone-hand-mobile@1x.png");
       .background(90%, 0%, 258px 286px);
+      @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+        background-image: url("../img/iphone-hand-mobile@2x.png");
+      }
     }
   }
 }
@@ -74,6 +77,9 @@
         height: 545px;
         background-image: url("../img/iphone-hand-tablet@1x.png");
         .background(100%, 0%, 700px 545px);
+        @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+          background-image: url("../img/iphone-hand-tablet@2x.png");
+        }
       }
     }
   }
@@ -130,8 +136,11 @@
 
         width: 1050px;
         height: 645px;
-        background-image: url("../../img/iphone-hand-desktop@1x.png");
+        background-image: url("../img/iphone-hand-desktop@1x.png");
         .background(100%, 0%, 1050px 645px);
+        @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+          background-image: url("../img/iphone-hand-desktop@2x.png");
+        }
       }
     }
   }
