исправление ошибок Travis

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -77,7 +77,7 @@
 
 @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
   .contacts__map {
-    background-image: url('../img/bg-map-mobile@2x.jpg');
+    background-image: url("../img/bg-map-mobile@2x.jpg");
   }
 }
 
@@ -126,7 +126,7 @@
     }
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-        background-image: url('../img/bg-map-tablet@2x.jpg');
+      background-image: url("../img/bg-map-tablet@2x.jpg");
     }
   }
 }
@@ -161,7 +161,7 @@
     }
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url('../img/bg-map-desktop@2x.jpg');
-  }
+      background-image: url("../img/bg-map-desktop@2x.jpg");
+    }
   }
 }
