--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -12,12 +12,13 @@
 
 .copyright__text {
   margin: 0;
-  padding-right: 12px;
+}
+
+.copyright__link {
+  padding-top: 8px;
 }
 
 .copyright__icon {
-  padding-top: 10px;
-
   fill: @text-blood;
 
   &:hover,
