--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,6 +8,7 @@
 }
 
 .form__legend {
+  min-width: 10px;
   margin: 0;
   padding: 15px 20px 18px 20px;
 
@@ -17,6 +18,10 @@
   text-align: center;
   text-transform: uppercase;
   color: @text-blood;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
 
   &--contact {
     display: none;
