Fix Pixel perfect

--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -160,6 +160,10 @@
     border: 2px solid @bg-gray-dark;
   }
 
+  .contest__contact-layout {
+    flex-basis: 100%;
+  }
+
   .contest__comment {
     display: flex;
     flex-wrap: wrap;
@@ -224,7 +228,6 @@
   .contest__contact-layout {
     justify-content: space-between;
     flex-direction: row;
-    flex-basis: 100%;
   }
 
   .contest__apps {
