--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -291,11 +291,11 @@
     padding-top: 15px;
 
     &--apps {
-      padding-top: 40px;
+      padding-top: 30px;
     }
 
     &--achievement {
-      padding-top: 40px;
+      padding-top: 25px;
     }
   }
 
@@ -323,6 +323,7 @@
   .form__text-field {
     padding: 14px 18px 15px 18px;
     min-height: 61px;
+    flex-grow: 1;
   }
 
   .form__legend {
@@ -383,7 +384,7 @@
 
   .form__textarea {
     padding: 13px 18px 13px 18px;
-    margin-top: 40px;
+    margin-top: 10px;
     margin-bottom: 35px;
 
     min-height: 192px;
@@ -448,7 +449,7 @@
   .form__textarea {
     min-height: 130px;
     margin-bottom: 42px;
-    margin-top: 35px;
+    margin-top: 8px;
   }
 
   .form__submit-note--desktop {
