Исправление замечания по Б5. Грубые ошибки методологии...

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -231,14 +231,14 @@
   text-align: center;
   text-transform: uppercase;
   color: @bg-darkblue;
+}
 
-  &--red {
-    color: @text-blood;
-  }
+.form__note {
+  color: @text-blood;
+}
 
-  &--desktop {
-    display: none;
-  }
+.form__text-desktop {
+  display: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -452,7 +452,7 @@
     margin-top: 8px;
   }
 
-  .form__submit-note--desktop {
+  .form__text-desktop {
     display: inline;
   }
 
