Fix background size

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -3,7 +3,7 @@
 
   background-color: #2c3949;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  .background(50%, 100%, cover);
+  .background(50%, 0%, cover);
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
@@ -131,7 +131,7 @@
 
 @media (min-width: @tablet-width) {
   .inner-page .page-header {
-    .background(50%, 0%, 180%);
+    .background(50%, 0%, 180% auto);
   }
 
   .page-header {
@@ -161,10 +161,10 @@
 
 @media (min-width: @desktop-width) {
   .inner-page .page-header {
-    .background(50%, 0%, 265%);
+    .background(50%, 0%, 213% auto);
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      .background(50%, -3%, 265%);
+      .background(50%, 10px, 213% auto);
     }
   }
 
